cmake_minimum_required(VERSION 3.29)
project(C_Coding_Test)

set(CMAKE_CXX_STANDARD 17)

add_executable(C_Coding_Test main.cpp)
add_executable(_2744 백준/일반/_2744.cpp)
add_executable(_2754 백준/일반/_2754.cpp)
add_executable(_27866 백준/일반/_27866.cpp)
add_executable(_11718 백준/일반/_11718.cpp)
add_executable(_9086 백준/일반/_9086.cpp)
add_executable(_26546 백준/일반/_26546.cpp)
add_executable(_15964 백준/일반/_15964.cpp)
add_executable(_1120 백준/일반/_1120.cpp)
add_executable(_1072 백준/이분탐색/_1072.cpp)
add_executable(_2512 백준/이분탐색/_2512.cpp)
add_executable(_15881 백준/일반/_15881.cpp)